[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Stickman.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/units2/elvish/archer.png" type="Texture" id=2]
[ext_resource path="res://Scripts/PlayerNPC.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Damage/DamageAreaRange.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 360.734

[node name="PlayerNPC" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="DamageNPC" type="Area2D" parent="." index="0"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageNPC" index="0"]
position = Vector2( 38, 29 )
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 50, 48 )

[node name="Sprite" type="Sprite" parent="." index="2"]
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 2 )
centered = false

[node name="HP_bar" parent="." index="3"]
margin_left = 24.0
margin_top = 0.0
margin_right = 80.0
margin_bottom = 8.0
value = 100.0

[node name="TimerAttack" type="Timer" parent="." index="4"]

[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
